[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenas/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenas/Nivel1.gd" type="Script" id=2]
[ext_resource path="res://Scenas/Roca.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenas/Interfaz.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/fondoespacio.png" type="Texture" id=5]
[ext_resource path="res://Sounds/SoundBank_ButtersSci [7].wav" type="AudioStream" id=6]
[ext_resource path="res://Sounds/Underpants Gnomes.wav" type="AudioStream" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1, -1, 0, 0, 0, 0, 639, 2, 0, 0, 0, 0, 640, 959, 0, 0, 0, 0, 2, 960, 0, 0, 0, 0, 1, -1 )
}

[node name="Nivel1" type="Node"]
script = ExtResource( 2 )
Roca = ExtResource( 3 )

[node name="Fondo" type="TextureRect" parent="."]
margin_right = 641.0
margin_bottom = 960.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 312.642, 619.455 )

[node name="TimerRoca" type="Timer" parent="."]
wait_time = 0.5

[node name="TimerScore" type="Timer" parent="."]

[node name="TimerInicio" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PosicionInicial" type="Position2D" parent="."]
position = Vector2( 320, 480 )

[node name="Camino" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="RocaPosicion" type="PathFollow2D" parent="Camino"]
position = Vector2( 1, -1 )
rotation = 0.00470216

[node name="Interfaz" parent="." instance=ExtResource( 4 )]

[node name="AudioMuerte" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Musica" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -13.126
[connection signal="Golpe" from="player" to="." method="_on_player_Golpe"]
[connection signal="timeout" from="TimerRoca" to="." method="_on_TimerRoca_timeout"]
[connection signal="timeout" from="TimerScore" to="." method="_on_TimerScore_timeout"]
[connection signal="timeout" from="TimerInicio" to="." method="_on_TimerInicio_timeout"]
[connection signal="iniciar_juego" from="Interfaz" to="." method="_nuevoJuego"]
[connection signal="finished" from="Musica" to="." method="_on_Musica_finished"]
